WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135028
Subpixel rendering: Embedded non-compositing rotate transform paints to wrong position.
https://bugs.webkit.org/show_bug.cgi?id=135028
Summary
Subpixel rendering: Embedded non-compositing rotate transform paints to wrong...
alan
Reported
2014-07-17 15:34:18 PDT
Created
attachment 235096
[details]
Test reduction see the attached test case. <
rdar://problem/17046421
>
Attachments
Test reduction
(996 bytes, text/html)
2014-07-17 15:34 PDT
,
alan
no flags
Details
Patch
(16.96 KB, patch)
2014-07-17 15:57 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2
(545.58 KB, application/zip)
2014-07-17 18:07 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2014-07-17 15:57:09 PDT
Created
attachment 235099
[details]
Patch
Build Bot
Comment 2
2014-07-17 18:07:55 PDT
Comment on
attachment 235099
[details]
Patch
Attachment 235099
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/4911087543648256
New failing tests: media/W3C/video/networkState/networkState_during_loadstart.html
Build Bot
Comment 3
2014-07-17 18:07:58 PDT
Created
attachment 235103
[details]
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-11 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
alan
Comment 4
2014-07-17 18:16:39 PDT
(In reply to
comment #2
)
> (From update of
attachment 235099
[details]
) >
Attachment 235099
[details]
did not pass mac-wk2-ews (mac-wk2): > Output:
http://webkit-queues.appspot.com/results/4911087543648256
> > New failing tests: > media/W3C/video/networkState/networkState_during_loadstart.html
looks unrelated.
WebKit Commit Bot
Comment 5
2014-07-17 18:56:32 PDT
Comment on
attachment 235099
[details]
Patch Clearing flags on attachment: 235099 Committed
r171210
: <
http://trac.webkit.org/changeset/171210
>
WebKit Commit Bot
Comment 6
2014-07-17 18:56:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug